--- a/marketing/src/components/home/Features.astro
+++ b/marketing/src/components/home/Features.astro
@@ -44,7 +44,7 @@ import { Icon } from "astro-icon";
       <div class="flex-initial w-3/4 ml-4">
         <p class="font-bold mb-1">GraphQl API</p>
         <p class="text-white-500">
-          API based on NestJS and the Prisma ORM, ready with example queries and
+          API based on NestJS and the MikroORM, ready with example queries and
           mutations.
         </p>
       </div>
