Validate users belong to org when creating/updating a project or team

--- a/marketing/src/components/NavBar.astro
+++ b/marketing/src/components/NavBar.astro
@@ -1,10 +1,10 @@
 ---
-import { Icon } from "astro-icon"
+import { Icon } from "astro-icon";
 
-import Config from "../site.config.cjs"
-import ThemeSwitcher from "./ThemeSwitcher.astro"
+import Config from "../site.config.cjs";
+import ThemeSwitcher from "./ThemeSwitcher.astro";
 
-import "./NavBar-SideBar.css"
+import "./NavBar-SideBar.css";
 ---
 
 <!-- Navbar -->
